# semaphore-stellar-contracts

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/CODE_OF_CONDUCT/: CODE_OF_CONDUCT.md
.github/PR_template/: PR_template.md
circuits/: .gitignore  circomkit.json  circuits.json  package.json  tsconfig.json
circuits/src/: semaphore.circom
contracts/: README.md
contracts/group/: Cargo.toml
contracts/group/src/: datatypes.rs  imt.rs  interface.rs  lib.rs  proof.rs  test.rs
contracts/group/test_snapshots/test/: test_accept_group_admin.1.json  test_accept_group_admin_caller_not_pending_admin.1.json  test_add_member.1.json  test_add_member_member_already_exists.1.json  test_create_group.1.json  test_get_group_admin.1.json  test_get_member_count.1.json  test_get_pending_admin.1.json  test_remove_member.1.json  test_update_group_admin.1.json  test_update_member.1.json  test_update_member_member_already_exists.1.json
contracts/semaphore/: Cargo.toml
contracts/semaphore/src/: datatypes.rs  imt.rs  interface.rs  lib.rs  test.rs
contracts/semaphore/test_snapshots/test/: test_accept_group_admin.1.json  test_add_mbrs.1.json  test_add_member.1.json  test_add_members.1.json  test_create_group.1.json  (+3 more)
contracts/semaphore_key_pts/: Cargo.toml
contracts/semaphore_key_pts/src/: lib.rs  test.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: datatypes.rs  interface.rs  lib.rs  test.rs
semaphore-contracts/contracts/semaphore/: Cargo.toml
semaphore-contracts/contracts/verifier/: Cargo.toml
semaphore-contracts/contracts/verifier/src/: lib.rs
(+16 files in other folders)
