[package]
name = "verifier"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ark-ff = "0.3"
ark-ec = "0.3"
ark-std = "0.3"
ark-bn254 = "0.3"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
