[package]
name = "verifier"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
semaphore = { git = "https://github.com/worldcoin/semaphore-rs" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
